fix: fix issues with checking whitespaces for inputs to validate and save cleaner data to db